[laskyawm] Fix add tab button jumping on hover of scrollable tab bar

--- a/laskyawm.css
+++ b/laskyawm.css
@@ -115,6 +115,7 @@ body:before {
 	cursor: default;
 	overflow: hidden;
 	position: relative;
+	vertical-align: top;
 }
 .window .titlebar .tabbar .tabtitlebar:first-child {
 	margin-left: 0;
